[package]
name = "skc"
version = "0.1.0"
edition = "2021"
authors = ["Michael Hall <michael@mbh.sh>"]
license = "MIT"
description = "Shared k-mer content between two genomes"
repository = "https://github.com/mbhall88/skc"
homepage = "https://github.com/mbhall88/skc"
readme = "README.md"
keywords = ["bioinformatics", "k-mers"]
categories = ["science", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.40"
clap = { version = "4.3.2", features = ["derive"] }
niffler = "2.5.0"
noodles = { version = "0.40.0", features = ["fasta"] }
env_logger = "0.10.0"
log = "0.4.19"
itertools = "0.10.5"
